tests/should_fail/exit_at_top_level.nds
-- `exit` is not allowed at top level.
exit while
